--- a/blog/views/front/Article_Id.html
+++ b/blog/views/front/Article_Id.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 	<head>
-		#parse('front/pagelet/Common.IndexHeader.html')
+		#parse('front/_pagelet/Common.IndexHeader.html')
 		<link rel='stylesheet' type='text/css' media='screen' href='http://www.foreworld.net/public/site/css/article.css?v3' />
 		<link rel='stylesheet' type='text/css' media='screen' href='${conf.html.cdn}bootstrap/3.2.0/docs/assets/css/docs.min.css?v3.2.0' />
 	</head>
 	<body>
-		#parse('front/pagelet/Side.TopBanner.html')
+		#parse('front/_pagelet/Side.TopBanner.html')
 		<header id='header'></header>
 		<section class='container'>
 			<div class='row'>
 				<div class='col-sm-12 col-md-8'>
-					#parse('front/pagelet/Side.TopMessage.html')
+					#parse('front/_pagelet/Side.TopMessage.html')
 					<div class='panel panel-default' style='box-shadow: 0 0 5px #c2c2c2;'>
 						<div class='panel-body article'>
 							<ol class='breadcrumb'>
@@ -115,21 +115,21 @@
 					</div>
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('front/pagelet/Side.HotArticleTopN.vm.html')
-					#parse('front/pagelet/Side.NewCommentTopN.vm.html')
-					#parse('front/pagelet/Side.UsefulLink.vm.html')
-					#parse('front/pagelet/Side.QrCode.html')
+					#parse('front/_pagelet/Side.HotArticleTopN.vm.html')
+					#parse('front/_pagelet/Side.NewCommentTopN.vm.html')
+					#parse('front/_pagelet/Side.UsefulLink.vm.html')
+					#parse('front/_pagelet/Side.QrCode.html')
 				</div>
 			</div>
 		</section>
-		#parse('front/pagelet/Side.IndexFooter.html')
-		#parse('front/pagelet/Side.BackTop.html')
-		#parse('front/pagelet/Common.IndexJs.html')
+		#parse('front/_pagelet/Side.IndexFooter.html')
+		#parse('front/_pagelet/Side.BackTop.html')
+		#parse('front/_pagelet/Common.IndexJs.html')
 		<!-- Own -->
 		<script type='text/javascript'>
 		var ZeroClipboard_PATH = '${conf.html.cdn}bootstrap/3.2.0/docs/assets/flash/ZeroClipboard.swf';
 		</script>
 		<script type='text/javascript' src='${conf.html.cdn}bootstrap/3.2.0/docs/assets/js/docs.min.js?v3.2.0' defer='defer'></script>		
-		#parse('front/pagelet/Common.LastJs.html')
+		#parse('front/_pagelet/Common.LastJs.html')
 	</body>
 </html>
