--- a/blog/views/front/_pagelet/Side.TopBanner.html
+++ b/blog/views/front/_pagelet/Side.TopBanner.html
@@ -42,7 +42,7 @@
 				<li class='dropdown${categoryActiveClass}'>
 					<a href='javascript:;' class='dropdown-toggle' data-toggle='dropdown'>分类 <b class='caret'></b></a>
 					<ul class='dropdown-menu'>
-						#parse('front/pagelet/Side.TopCategoryNav.vm.html')</ul>
+						#parse('front/_pagelet/Side.TopCategoryNav.vm.html')</ul>
 				</li>
 				<li${tagActiveClass}><a href='/archive/tag/'>标签</a></li>
 				<li><a href='javascript:;'>留言</a></li>
