--- a/blog/views/front/tag/Index.html
+++ b/blog/views/front/tag/Index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 	<head>
-		#parse('front/pagelet/Common.IndexHeader.html')
+		#parse('front/_pagelet/Common.IndexHeader.html')
 	</head>
 	<body>
-		#parse('front/pagelet/Side.TopBanner.html')
+		#parse('front/_pagelet/Side.TopBanner.html')
 		<header id='header'></header>
 		<section class='container'>
 			<div class='row'>
 				<div class='col-sm-12 col-md-8'>
-					#parse('front/pagelet/Side.TopMessage.html')
+					#parse('front/_pagelet/Side.TopMessage.html')
 					<div class='panel panel-default' style='box-shadow: 0 0 5px #c2c2c2;'>
 						<div class='panel-body'>
 							<ol class='breadcrumb'>
@@ -20,7 +20,7 @@
 							</ol>
 							<div id='tags'>
 								<div class='panel-group olx-accordion'>
-									#parse('front/tag/Side.Tag.vm.html')
+									#parse('front/tag/_pagelet/Side.Tag.vm.html')
 								</div>
 							</div>
 							<div>
@@ -37,17 +37,17 @@
 					</div>
 				</div>
 				<div class='col-sm-12 col-md-4'>
-					#parse('front/pagelet/Side.HotArticleTopN.vm.html')
-					#parse('front/pagelet/Side.NewCommentTopN.vm.html')
-					#parse('front/pagelet/Side.UsefulLink.vm.html')
-					#parse('front/pagelet/Side.QrCode.html')
+					#parse('front/_pagelet/Side.HotArticleTopN.vm.html')
+					#parse('front/_pagelet/Side.NewCommentTopN.vm.html')
+					#parse('front/_pagelet/Side.UsefulLink.vm.html')
+					#parse('front/_pagelet/Side.QrCode.html')
 				</div>
 			</div>
 		</section>
-		#parse('front/pagelet/Side.IndexFooter.html')
-		#parse('front/pagelet/Side.BackTop.html')
-		#parse('front/pagelet/Common.IndexJs.html')
+		#parse('front/_pagelet/Side.IndexFooter.html')
+		#parse('front/_pagelet/Side.BackTop.html')
+		#parse('front/_pagelet/Common.IndexJs.html')
 		<!-- Own -->
-		#parse('front/pagelet/Common.LastJs.html')
+		#parse('front/_pagelet/Common.LastJs.html')
 	</body>
 </html>
