--- a/blog/views/front/user/Register.html
+++ b/blog/views/front/user/Register.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 	<head>
-		#parse('front/pagelet/Common.IndexHeader.html')
+		#parse('front/_pagelet/Common.IndexHeader.html')
 		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/user/css/register.css?v1' media='screen'>
 	</head>
 	<body>
-		#parse('front/pagelet/Side.TopBanner.html')
+		#parse('front/_pagelet/Side.TopBanner.html')
 		<header id='header'></header>
 		<div class='container'>
 			<div class='row'>
@@ -92,8 +92,8 @@
 				</div>
 			</div>
 		</div>
-		#parse('front/pagelet/Side.IndexFooter.html')
-		#parse('front/pagelet/Common.IndexJs.html')
+		#parse('front/_pagelet/Side.IndexFooter.html')
+		#parse('front/_pagelet/Common.IndexJs.html')
 		<!-- Own -->
 		<script type='text/javascript'>
 			$('#img_VerifyCode').click(function(){
@@ -137,6 +137,6 @@
 
 			$('#btn_reg').click(subFrm);
 		</script>
-		#parse('front/pagelet/Common.LastJs.html')
+		#parse('front/_pagelet/Common.LastJs.html')
 	</body>
 </html>
