--- a/blog/views/manage/article/tag/Index.html
+++ b/blog/views/manage/article/tag/Index.html
@@ -67,7 +67,7 @@
 						<button class='close' aria-hidden='true' data-dismiss='modal' type='button'>×</button>
 						<h4 id='addModalLabel' class='modal-title'><b>新增</b></h4>
 					</div>
-					<form id='addFrm' data-olx-type='olx.form' class='form-horizontal' role='form' data-url='add'>
+					<form id='addFrm' data-olx-type='olx.form' class='form-horizontal' role='form' data-url='create'>
 						<div class='modal-body'>
 							<div class='form-group'>
 								<label for='addFrm_TagName' class='col-sm-3 control-label'><span class='olx-form-required'>*</span>标签名称</label>
