--- a/blog/views/back/Index.html
+++ b/blog/views/back/Index.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('front/_pagelet/Common.IndexHeader.html')
-		<link rel='stylesheet' type='text/css' media='screen' href='http://www.foreworld.net/public/user/css/my.css?v3' />
+		<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}user/css/my.css?v3' />
 	</head>
 	<body>
 		#parse('front/_pagelet/Side.TopBanner.html')
