--- a/blog/views/manage/article/category/Index.html
+++ b/blog/views/manage/article/category/Index.html
@@ -3,7 +3,7 @@
 	<head>
 		#parse('front/_pagelet/Common.IndexHeader.html')
 		<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bootstrap-datetimepicker/2.2.0/css/bootstrap-datetimepicker.min.css' media='screen'>
-		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/manage/css/index.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}manage/css/index.css?v3' />
 	</head>
 	<body>
 		#parse('manage/_pagelet/Side.TopBanner.html')
