--- a/blog/views/back/article/Side.BlogFrm.vm.html
+++ b/blog/views/back/article/Side.BlogFrm.vm.html
@@ -1,6 +1,6 @@
 <link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bootstrap/3.2.0/docs/assets/css/docs.min.css?v3.2.0' media='screen' />
 <link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bootstrap-markdown/2.5.0/css/bootstrap-markdown.min.css?v3.0.3' media='screen' />
-<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/site/css/article.css?v3' media='screen' />
+<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}site/css/article.css?v3' />
 <form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url=''>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Title'>博客标题</label>
