--- a/blog/views/front/Article_Id.html
+++ b/blog/views/front/Article_Id.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('front/_pagelet/Common.IndexHeader.html')
-		<link rel='stylesheet' type='text/css' media='screen' href='http://www.foreworld.net/public/site/css/article.css?v3' />
+		<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}site/css/article.css?v3' />
 		<link rel='stylesheet' type='text/css' media='screen' href='${conf.html.cdn}bootstrap/3.2.0/docs/assets/css/docs.min.css?v3.2.0' />
 	</head>
 	<body>
