--- a/blog/views/front/Tag_Name.html
+++ b/blog/views/front/Tag_Name.html
@@ -2,8 +2,8 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('front/_pagelet/Common.IndexHeader.html')
-		<link rel='stylesheet' type='text/css' media='screen' href='http://www.foreworld.net/public/site/css/artintro.css?v3' />
-		<link rel='stylesheet' type='text/css' media='screen' href='http://www.foreworld.net/public/site/css/loadmore.css?v3' />
+		<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}site/css/artintro.css?v3' />
+		<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}site/css/loadmore.css?v3' />
 	</head>
 	<body>
 		#parse('front/_pagelet/Side.TopBanner.html')
