--- a/blog/views/front/_pagelet/Common.IndexHeader.html
+++ b/blog/views/front/_pagelet/Common.IndexHeader.html
@@ -21,5 +21,5 @@
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}bootstrap/3.2.0/dist/css/bootstrap-theme.min.css?v3.2.0' />
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}flexslider/2.2.2/flexslider.css' />
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}font-awesome/4.1.0/css/font-awesome.min.css' />
-<link rel='stylesheet' type='text/css' media='screen' href='http://www.foreworld.net/public/assets/css/olx/olx.css?v3' />
+<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}assets/css/olx/olx.css?v3' />
 <script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js?v2.0.2'></script>
