--- a/blog/views/manage/manager/ChangePwd.html
+++ b/blog/views/manage/manager/ChangePwd.html
@@ -2,7 +2,7 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('front/_pagelet/Common.IndexHeader.html')
-		<link rel='stylesheet' type='text/css' href='http://www.foreworld.net/public/manage/css/index.css?v3' media='screen' />
+		<link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}manage/css/index.css?v3' />
 	</head>
 	<body>
 		#parse('manage/_pagelet/Side.TopBanner.html')
