--- a/blog/views/back/Index.html
+++ b/blog/views/back/Index.html
@@ -58,45 +58,34 @@
 				#parse('back/_pagelet/Side.Bar2.vm.html')
 			</div>
 		</div>
-		<div class='modal fade' id='delConfirmModal'>
-			<div class='modal-dialog'>
-				<div class='modal-content'>
-					<div class='modal-header'>
-						<button type='button' class='close' data-dismiss='modal' aria-hidden='true'>&times;</button>
-						<h4 class='modal-title'><b>警告</b></h4>
-					</div>
-					<div class='modal-body'>
-						<p>你确认执行该删除操作吗？</p>
-					</div>
-					<div class='modal-footer'>
-						<button type='button' class='btn btn-default' data-dismiss='modal'>关闭</button>
-						<button type='button' class='btn btn-primary' id='delConfirmModal_btn_submit'>确认</button>
-					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal-dialog -->
-		</div><!-- /.modal -->
+		#include('_pagelet/Modal.DelConfirm.html')
+		#include('_pagelet/Modal.Alert.html')
 		#parse('front/_pagelet/Side.IndexFooter.html')
 		#parse('front/_pagelet/Side.BackTop.html')
 		#parse('front/_pagelet/Common.IndexJs.html')
 		<!-- Own -->
 		#parse('front/_pagelet/Common.LastJs.html')
 		<script type='text/javascript'>
-		var del_id = null;
-		function del(id){
-			del_id = id;
-			$('#delConfirmModal').modal();
-		}
-		$(function(){
-			$('#delConfirmModal_btn_submit').click(function(){
+		(function(that){
+			var del_id = null;
+			that.del = function(id){
+				del_id = id;
+				$('#delConfirmModal').modal();
+			}
+			$('#delConfirmModal_ok').click(function(){
 				$.ajax({
 					url: 'admin/remove/article/'+ del_id,
 					type: 'POST',
 					dataType: 'json'
 				}).done(function (data){
-					location.reload();
+					if(data.success) return location.reload();
+					$($('#alertModal b')[0]).html('提示');
+					$($('#alertModal p')[0]).html(data.msg);
+					$('#alertModal').modal();
+					$('#delConfirmModal').modal('hide');
 				});
 			});
-		});
+		})(this);
 		</script>
 	</body>
 </html>
