--- a/blog/views/front/_pagelet/Side.TopBookmarkTopN.vm.html
+++ b/blog/views/front/_pagelet/Side.TopBookmarkTopN.vm.html
@@ -9,8 +9,10 @@
 </section>
 <script type='text/javascript'>
 $(function(){
-	$('.flexslider').flexslider({
-		animation: 'slide'
-	});
+	setTimeout(function(){
+		$('.flexslider').flexslider({
+			animation: 'slide'
+		});
+	}, 1000);
 });
 </script>
