--- a/blog/views/front/_pagelet/Common.IndexHeader.html
+++ b/blog/views/front/_pagelet/Common.IndexHeader.html
@@ -10,16 +10,32 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0' />
 <link rel='shortcut icon' href='$!{conf.html.static_res}assets/images/favicon.png?v1' />
 <!--[if lte IE 9]>
-<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/bootstrap-ie6.css' />
-<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/ie.css' />
-<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
+	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/bootstrap-ie6.css' />
+	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/ie.css' />
+	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
 <![endif]-->
 <!--[if lte IE 7]>
-<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
+	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
 <![endif]-->
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}bootstrap/3.2.0/dist/css/bootstrap.min.css?v3.2.0' />
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}bootstrap/3.2.0/dist/css/bootstrap-theme.min.css?v3.2.0' />
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}flexslider/2.2.2/flexslider.css' />
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.cdn}font-awesome/4.1.0/css/font-awesome.min.css' />
 <link rel='stylesheet' type='text/css' media='screen' href='$!{conf.html.external_res}assets/css/olx/olx.css?v3' />
-<script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js?v2.0.2'></script>
+<script language='JavaScript' type='text/javascript'>
+function isIE(){
+	return (!!window.ActiveXObject || 'ActiveXObject' in window);
+}
+if(isIE()){
+	// console.log('I use IE.');
+}else{
+	document.write("<script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js?v2.0.2'><\/script>");
+}
+</script>
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+	<script type='text/javascript' src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
+	<script type='text/javascript' src='$!{conf.html.cdn}html5shiv/3.7.2/html5shiv.min.js'></script>
+	<script type='text/javascript' src='$!{conf.html.cdn}respond/1.4.2/respond.min.js'></script>
+<![endif]-->
