--- a/blog/views/front/_pagelet/Common.IndexHeader.html
+++ b/blog/views/front/_pagelet/Common.IndexHeader.html
@@ -34,8 +34,11 @@ if(isIE()){
 </script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if gte IE 9]>
+	<script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js'></script>
+<![endif]-->
 <!--[if lt IE 9]>
-	<script type='text/javascript' src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
+	<script type='text/javascript' src='$!{conf.html.cdn}jquery/1.11.3/jquery.min.js'></script>
 	<script type='text/javascript' src='$!{conf.html.cdn}html5shiv/3.7.2/html5shiv.min.js'></script>
 	<script type='text/javascript' src='$!{conf.html.cdn}respond/1.4.2/respond.min.js'></script>
 <![endif]-->
