--- a/blog/views/front/_pagelet/Common.IndexHeader.html
+++ b/blog/views/front/_pagelet/Common.IndexHeader.html
@@ -8,6 +8,8 @@
 <meta name='generator' content='Foreworld' />
 <meta http-equiv='content-type' content='text/html;charset=utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}pace/1.0.2/themes/pace-theme-barber-shop.css' />
+<script type='text/javascript' src='$!{conf.html.cdn}pace/1.0.2/pace.min.js'></script>
 <link rel='shortcut icon' href='$!{conf.html.static_res}assets/images/favicon.png?v1' />
 <!--[if lte IE 9]>
 	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/bootstrap-ie6.css' />
