--- a/blog/views/front/_pagelet/Side.LoadMore.html
+++ b/blog/views/front/_pagelet/Side.LoadMore.html
@@ -18,7 +18,7 @@ $(function(){
 			})
 		};
 		$.ajax({
-			url: $().olxUtilRandomUrl(widget.data('url')),
+			url: $().olxUtilRandomUrl(encodeURI(widget.data('url'))),
 			type: 'GET',
 			dataType: 'json',
 			data: data
