--- a/blog/views/front/_pagelet/Common.IndexHeader.html
+++ b/blog/views/front/_pagelet/Common.IndexHeader.html
@@ -8,8 +8,6 @@
 <meta name='generator' content='Foreworld' />
 <meta http-equiv='content-type' content='text/html;charset=utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}pace/1.0.2/themes/pace-theme-barber-shop.css' />
-<script type='text/javascript' src='$!{conf.html.cdn}pace/1.0.2/pace.min.js'></script>
 <link rel='shortcut icon' href='$!{conf.html.static_res}assets/images/favicon.png?v1' />
 <!--[if lte IE 9]>
 	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}bsie/0.0.0/css/bootstrap-ie6.css' />
@@ -31,12 +29,16 @@ function isIE(){
 if(isIE()){
 	// console.log('I use IE.');
 }else{
+	document.write("<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}pace/1.0.2/themes/pace-theme-barber-shop.css' \/>");
+	document.write("<script type='text/javascript' src='$!{conf.html.cdn}pace/1.0.2/pace.min.js'><\/script>");
 	document.write("<script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js?v2.0.2'><\/script>");
 }
 </script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if gte IE 9]>
+	<link rel='stylesheet' type='text/css' href='$!{conf.html.cdn}pace/1.0.2/themes/pace-theme-barber-shop.css' />
+	<script type='text/javascript' src='$!{conf.html.cdn}pace/1.0.2/pace.min.js'></script>
 	<script type='text/javascript' src='$!{conf.html.cdn}jquery/2.0.2/jquery.min.js'></script>
 <![endif]-->
 <!--[if lt IE 9]>
