--- a/blog/views/front/_pagelet/Side.IndexFooter.html
+++ b/blog/views/front/_pagelet/Side.IndexFooter.html
@@ -3,7 +3,7 @@
 		<div>
 			<p>Copyright © 2014 <a href='http://www.foreworld.net'>洪荒</a> FOREWORLD.NET. All Rights Reserved.</p>
 			<p>
-				<a href='http://www.miibeian.gov.cn' style='vertical-align:bottom;'>豫ICP备09015367号</a>
+				<a href='http://www.miibeian.gov.cn' style='vertical-align:bottom;'>豫ICP备09015367号-1</a>
 				#*<a target='_blank' href='http://tongji.baidu.com/hm-web/welcome/ico?s=3afbf84e4628a9eb94ccbc0dcea8c859'>
 					<img width='20' height='20' border='0' src='http://eiv.baidu.com/hmt/icon/23.gif'>
 				</a>*#
