--- a/blog/views/front/_pagelet/Side.QrCode.html
+++ b/blog/views/front/_pagelet/Side.QrCode.html
@@ -3,7 +3,7 @@
 </div>
 <video id='video' autoplay=''></video>
 <figure id='camera'>
-	<img src='$!{conf.html.static_res}assets/images/camera/48x48.png' alt='摄像头' title='开启摄像头（火狐, WebKit）'>
+	<img src='$!{conf.html.static_res}assets/images/camera/48x48.png' alt='摄像头' title='开启摄像头（火狐、WebKit）'>
 </figure>
 <script type='text/javascript'>
 $(function(){
