--- a/blog/views/front/_pagelet/Common.IndexHeader.html
+++ b/blog/views/front/_pagelet/Common.IndexHeader.html
@@ -1,5 +1,6 @@
 <title>$!title</title>
 <meta charset='utf-8' />
+<meta name='referrer' content='no-referrer' />
 <meta name='robots' content='all' />
 <meta name='author' content='3203317@qq.com,新' />
 <meta name='copyright' content='Foreworld.Net copyright 2014' />
