--- a/blog/views/front/_pagelet/Side.TopBookmarkTopN.vm.html
+++ b/blog/views/front/_pagelet/Side.TopBookmarkTopN.vm.html
@@ -2,7 +2,7 @@
 	<ul class='slides'>
 		#foreach($article in $!{data.bookmarkTopN})<li>
 			<a href='/archive/$!{article._id}.html'>
-				<img src='/public/udata/foreworld/$!{article.Photo}'
+				<img src='$!{article.Photo}'
 					title='$!{article.Title}' alt='$!{article.Title}' /></a>
 		</li>#end
 	</ul>
